# SBB-Monitor

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  WEB_INTEGRATION_SPECIFICATION.md  bugs.md  partitions.csv  sdkconfig.defaults
esp32/: INTEGRATION.md  MAIN_CHANGES.md
esp32/main/: http_server.c  http_server.h  nvs_config.c  nvs_config.h
esp32/web/: index.html
main/: CMakeLists.txt  blink_example_main.c  http_server.c  http_server.h  main.c  nvs_config.c  nvs_config.h  sbb.c  sbb.h  secrets.h.example
main/spiffs/: index.html
